--- a/html5up-solid-state/index.html
+++ b/html5up-solid-state/index.html
@@ -45,7 +45,7 @@
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
 							<h2>Jia Wen Cheng</h2>
-							<p>Final Year Business Studies student at Dublin City University<br />Welcome to my webpage</p>
+							<p>Welcome to my website! Final Year Business Studies student at Dublin City University<br />Welcome to my webpage</p>
 						</div>
 					</section>
 
